hiding obsolete test file

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 *.pyc
-secrets.py
 *.conf
-*.conf~
 *.txt
 *.log
+*.conf~
 .gitignore~
-test.py
-!requirements.txt
-.cache/
-Procfile~
-venv
-.env
 .env~
+.cache/
+.env
+Procfile~
 README.md~
+secrets.py
+test.py
+bot_test.py
+venv
+!requirements.txt
